--- a/src/main/resources/msg_en.properties
+++ b/src/main/resources/msg_en.properties
@@ -1,5 +1,5 @@
 error.server= "System error. Please try again later!"
 product.notfound = "Product does not exist "
 product.createError = "Error creating product"
-product.success = "Success"
+product.success = "SUCCESS"
 product.fail = "FAIL"
