--- a/src/main/resources/msg_en.properties
+++ b/src/main/resources/msg_en.properties
@@ -1,5 +1,4 @@
 error.server= "System error. Please try again later!"
-product.notfound = "Product does not exist "
-product.createError = "Error creating product"
-product.success = "SUCCESS"
+product.not.found = "Product does not exist "
+product.create.error = "Error creating product"
 product.fail = "FAIL"
