--- a/src/main/resources/msg_vi.properties
+++ b/src/main/resources/msg_vi.properties
@@ -1,7 +1,6 @@
 #Error
-error.server= "L?i h? th?ng. Vui lòng th? l?i sau!"
+error.server= "Loi he thong. Vui lòng thu lai sau!"
 # Product
-product.notfound = "S?n ph?m không t?n t?i "
-product.createError = "L?i khi t?o s?n ph?m"
-product.success = "Thành công"
+product.not.found = "San pham không t?n t?i "
+product.create.error = "L?i khi t?o s?n ph?m"
 product.fail = "Th?t b?i"
